--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,18 @@ members = [
 resolver = "2"
 
 [workspace.dependencies]
+chrono = { version = "0.4.42" , features = ["serde"]  }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-reqwest = { version = "0.12", features = ["json"] }
-tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+reqwest = { version = "0.12.24", features = ["json"] }
+tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
 anyhow = "1"
-thiserror = "1"
+thiserror = "2.0.17"
+uuid = { version = "1.18.1", features = ["v4", "serde"] }
+sqlx = { version = "0.8.6",features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"]  }
+tracing = {version = "0.1.43"}
+tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "chrono", "time"] }
+actix-web = "4.12.1"
+actix-cors = "0.7.1"
+actix-service = "2"
+dotenvy = "0.15.7"
