--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,7 @@ actix-web = "4.12.1"
 actix-cors = "0.7.1"
 actix-service = "2"
 dotenvy = "0.15.7"
+async-trait = "0.1.89"
+jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
+argon2="0.5.3"
+rand_core = { version = "0.6", features = ["getrandom"] }
