--- a/blog-server/Cargo.toml
+++ b/blog-server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 uuid = {workspace = true}
 chrono = {workspace = true }
 serde = { workspace = true}
+serde_json = { workspace = true}
 thiserror =  {workspace = true}
 sqlx =  {workspace = true}
 tracing-subscriber =  {workspace = true}
@@ -16,6 +17,10 @@ anyhow = {workspace = true}
 tracing = {workspace = true}
 dotenvy = {workspace = true}
 actix-service = {workspace = true}
+jsonwebtoken = {workspace = true}
+argon2 = {workspace = true}
+rand_core = {workspace = true}
+async-trait = {workspace = true}
 futures-util = "0.3.31"
 
 [build-dependencies]
