--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ async-trait = "0.1.89"
 jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
 argon2="0.5.3"
 rand_core = { version = "0.6", features = ["getrandom"] }
+futures-util = "0.3.31"
