--- a/blog-server/Cargo.toml
+++ b/blog-server/Cargo.toml
@@ -21,7 +21,7 @@ jsonwebtoken = {workspace = true}
 argon2 = {workspace = true}
 rand_core = {workspace = true}
 async-trait = {workspace = true}
-futures-util = "0.3.31"
+futures-util = {workspace = true}
 
 [build-dependencies]
 tonic-build = "0.11.0"
