--- a/blog-server/Cargo.toml
+++ b/blog-server/Cargo.toml
@@ -22,6 +22,7 @@ argon2 = {workspace = true}
 rand_core = {workspace = true}
 async-trait = {workspace = true}
 futures-util = {workspace = true}
+tracing-log = "0.2.0"
 
 [build-dependencies]
 tonic-build = "0.11.0"
