--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,7 @@ jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
 argon2="0.5.3"
 rand_core = { version = "0.6", features = ["getrandom"] }
 futures-util = "0.3.31"
+tonic = "0.11.0"
+prost = "0.12"
+prost-types = "0.12"
+tracing-log = "0.2.0"
