--- a/blog-server/Cargo.toml
+++ b/blog-server/Cargo.toml
@@ -22,7 +22,10 @@ argon2 = {workspace = true}
 rand_core = {workspace = true}
 async-trait = {workspace = true}
 futures-util = {workspace = true}
-tracing-log = "0.2.0"
+tracing-log = { workspace = true}
+tonic = {workspace = true}
+prost = {workspace = true}
+prost-types = {workspace = true}
 
 [build-dependencies]
 tonic-build = "0.11.0"
