--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 LOG_FORMAT=text
 HOST=127.0.0.1
-PORT=8080
+HTTP_PORT=8080
+GRPC_PORT=50051
 DATABASE_URL=postgres://postgres:postgres@127.0.0.1:5432/bank_api
 JWT_SECRET=dev_super_secret_change_me_please
 CORS_ORIGINS=http://localhost:3000
