--- a/blog-server/Cargo.toml
+++ b/blog-server/Cargo.toml
@@ -26,6 +26,7 @@ tracing-log = { workspace = true}
 tonic = {workspace = true}
 prost = {workspace = true}
 prost-types = {workspace = true}
+tokio = { version = "1.48.0",features = ["full"] }
 
 [build-dependencies]
 tonic-build = "0.11.0"
