--- a/blog-server/Cargo.toml
+++ b/blog-server/Cargo.toml
@@ -26,7 +26,7 @@ tracing-log = { workspace = true}
 tonic = {workspace = true}
 prost = {workspace = true}
 prost-types = {workspace = true}
-tokio = { version = "1.48.0",features = ["full"] }
+tokio = { workspace = true}
 
 [build-dependencies]
 tonic-build = "0.11.0"
