--- a/blog-client/Cargo.toml
+++ b/blog-client/Cargo.toml
@@ -12,6 +12,7 @@ anyhow  = { workspace = true  }
 chrono = { workspace = true  }
 serde = { workspace = true  }
 uuid = { workspace = true  }
+prost = {workspace = true}
 
 [build-dependencies]
 tonic-build = "0.11"
