--- a/blog-cli/Cargo.toml
+++ b/blog-cli/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+blog-client = { path = "../blog-client" }
+
+clap = {version = "4.5.53", features = ["derive"]}
+anyhow = {workspace = true}
+uuid = {workspace = true}
+tokio = {workspace = true}
+dotenvy = {workspace = true}
