--- a/blog-wasm/Cargo.toml
+++ b/blog-wasm/Cargo.toml
@@ -7,3 +7,10 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
+wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
+wasm-bindgen-futures = "0.4"
+gloo-net = "0.6.0"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+serde-wasm-bindgen = "0.6.5"
+web-sys = "0.3.83"
