--- a/blog-wasm/Cargo.toml
+++ b/blog-wasm/Cargo.toml
@@ -13,4 +13,11 @@ gloo-net = "0.6.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 serde-wasm-bindgen = "0.6.5"
-web-sys = "0.3.83"
+web-sys = { version = "0.3", features = [
+    "Window",
+    "Document",
+    "Element",
+    "HtmlElement",
+    "Storage",
+    "console",
+] }
